--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ select {
     transform: translateY(0);
   }
   50% {
-    transform: translateY(-20px);
+    transform: translateY(-10rem);
   }
 }
 
